--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -12,6 +12,7 @@
             <app-assistente-virtual *ngIf="showAssistenteVirtual"></app-assistente-virtual>
             <app-receba-nossa-ligacao *ngIf="showRecebaNossaLigacao"></app-receba-nossa-ligacao>
             <app-acordos-andamento *ngIf="showAcordosAndamento"></app-acordos-andamento>
+            <app-fiz-pagamento *ngIf="showFizPagamento"></app-fiz-pagamento>
                         
             <div class="padding-right-10px" *ngIf="showOpcoes">
                 <h3 class="text-center bem-vindo" *ngIf="!fizPagamentoOk">Bem-vindo, <span class="text-capitalize">{{nome}}</span>!</h3>    
@@ -56,11 +57,11 @@
                 </div>            
         </div>
 
-            <div class="card col-lg-2" *ngIf="cardBodyPagamento" (click)="fizPagamento()" [hidden]="true">
+            <div class="card col-lg-2" (click)="fizPagamento()" *ngIf="this.apiRestService.dividas.Acordo">
                     <img src="assets/icons/fiz-pagamento.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">JÁ FIZ O PAGAMENTO</h5>
-                    <p class="card-text">Já realizou o pagamento de seus débitos com a claro? Pressione o botão abaixo!</p>
+                    <p class="card-text">Já realizou o pagamento de seus débitos com a Claro? Pressione o botão abaixo!</p>
                         
                     </div>
                     <p class="btn btn-acessar back-red">Informar</p>
