--- a/src/app/fiz-pagamento/fiz-pagamento.component.css
+++ b/src/app/fiz-pagamento/fiz-pagamento.component.css
@@ -25,79 +25,161 @@ button {
         font-size: 20px;
     }
 
-    .acc-body {
+
+
+
+
+
+
+
+.produto-heading {
+    line-height: 44px;
+    font-size: 22px;
+    margin-left: 10px;    
+    }
+    
+    .logo {
+        width: 120px;
+        display: block;
+        margin: 10px auto;
+    }
+    
+    .produto-img {
+        height: 45px;
+        float: left;
+    }
+    
+    .btn {
+        width: 100%;
+        font-size: 19px;  
+    }
+    
+    .btn-negociar {
         position: relative;
-        top: -15px;
-    }
-
-    .bottom-parcela {
-      margin-bottom: 0px; 
-      
+        top: -20px;
+        width: 200px;
+        display: block;
+        margin: 0 auto;
     }
     
-    .parcela-border {
-        border-bottom: 1px solid rgba(0,0,0,.125);     
-        margin-bottom: 5px;      
+    table {
+        margin-bottom: 20px;
     }
-
-   
-    @media (max-width: 768px) {
-        .no-padd-left {
-            padding-left: 0;
-        }
-
-        .no-padd-right {
-            padding-right: 0;
-        }
-
-        .bottom-parcela {
-            margin-bottom: 10px;            
-          }
-        
-        .btn-accordion {
-            font-size: 15px;
-        }    
-
-        .produto-img {
-            height: 25px;
-        }    
-
-        .img-produto {
-            line-height: 25px;
-        }
-
-        .btn-linha {
-            line-height: 22px;
-        }
-
-        .acc-body {
-            font-size: 15px;
-        }
-
-        .valor-mobile {
-            font-size: 14px;
-            padding-left: 0;
-        }
-
-        .loader-wrap {
-            position: relative;
-            left: 8px;
-            width: 30px;
-            height: 30px;
-        }
-
-        .titulo-mobile {
-            font-weight: bold;
-            font-size: large;
-        }
-
-        .padd-mobile {
-            padding: 2px;
-        }
     
-        .btn-segunda {
-            /*margin-bottom: 0px;
-            margin-top: -20px;*/
-            margin-bottom: 5px;
-        }
+    .opcoes-parcelamento {  
+        width: 90%;
+        margin: 0 auto;
     }    
+            
+    .opcoes-parcelamento .btn {
+        margin-bottom: 25px;
+        width: 250px;    
+    }
+    
+    .metodo-pagamento {
+        margin-top: 25px;
+        border: 1px solid rgba(0,0,0,.125);
+        padding-bottom: 10px;
+        /*margin-left: 7px;*/
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    
+    .movelLabel {
+        display: inline-block;
+        margin-left: 100px;
+        color: black;
+        font-weight: bold;
+    }
+    
+    .panel-collapse > div {
+        padding-top: 0 !important
+    }
+    
+    .opcoes-para-parcelamento {
+        text-align: right;
+    }
+    
+    .metodo-de-pagamento {
+        text-align: center;
+        margin-bottom: 5px;
+    }
+    
+    .btn-smaller {
+        width: 205px !important;
+    }
+
+    .btn-acessar {
+        margin: -5px auto 0;
+    }
+    
+    @media (max-width: 768px) {
+    
+        h3 {
+            margin-right: 10px;
+            margin-left: 10px;
+        }
+        
+        .opcoes-para-parcelamento {
+            text-align: left;
+        }    
+    
+        .btn {
+            margin-top: 10px;
+            font-size: 17px;    
+        }
+    
+        .metodo-pagamento {
+            margin-top: 0px;
+            margin-bottom: 7px;
+            margin-left: 0;
+        }
+        
+        .metodo-de-pagamento {
+            margin-bottom: 0;
+            margin-top: 5px;
+            text-align: left;
+            font-size: 17px;
+        }
+    
+        .btn-accordion {
+            margin: 0;
+            padding: 0;
+        }
+          
+        table {
+            margin-top: -16px;
+            margin-bottom: -10px;
+        }
+    
+        .movelLabel {
+            display: none;
+        }
+    
+        .opcoes-parcelamento {
+            width: 100%;
+            margin: auto;
+            position: relative;
+            top: -20px;
+        }
+    
+        .opcoes-parcelamento .btn {
+            /*width: 155px;*/
+            display: block;
+            margin: 20px auto 0;
+            padding: 1px;
+            /*position: relative;
+            left: -20px;*/
+        }
+    
+        .btn-negociar {
+            top: -5px;
+        }
+           
+    }
+    
+    .loader-wrap-wrap {
+        height: 4500px;
+    }
+    
+    
