--- a/src/styles.css
+++ b/src/styles.css
@@ -86,6 +86,20 @@ h3 {
   padding-left: 15px;
 }
 
+.btn-acessar {
+  background: #e32620;
+  padding: 8px 16px;
+  font-size: 16px;
+  border-radius: 50px;
+  line-height: 1;
+  
+  color: white;
+  margin: 20px auto;
+  width: 100px;
+  transition: color .15s cubic-bezier(.455,.03,.515,.955),background .15s cubic-bezier(.455,.03,.515,.955);
+}
+
+
 @media (max-width: 1000px) {
 
   .up-15px-mobile {
