--- a/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
+++ b/src/app/cpf-cnpj-box/cpf-cnpj-box.component.html
@@ -18,6 +18,6 @@
     </div> 
  </div>
 
- <a class="fixed-bottom auto_inicio" target="_blank" href="http://www.fulltimesolucoes.com.br/" *ngIf="disclaimer">{{ disclaimer }}  A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
+ <a class="fixed-bottom auto_inicio" target="_blank" href="http://www.fulltimesolucoes.com.br/" *ngIf="disclaimer">A Fulltime é uma empresa autorizada pela Claro para a cobrança de débito.</a>
 
 </div>
