--- a/src/app/opcoes-routlet/opcoes-routlet.component.html
+++ b/src/app/opcoes-routlet/opcoes-routlet.component.html
@@ -15,7 +15,7 @@
             <app-fiz-pagamento *ngIf="showFizPagamento"></app-fiz-pagamento>
                         
             <div class="padding-right-10px" *ngIf="showOpcoes">
-                <h3 class="text-center bem-vindo" *ngIf="!fizPagamentoOk">Bem-vindo, <span class="text-capitalize">{{nome}}</span>!</h3>    
+                <h3 class="text-center bem-vindo">Bem-vindo, <span class="text-capitalize">{{nome}}</span>!</h3>    
                 
                 <div class="row">                    
                     <a class="card col-lg-2" (click)="negocieOnline()" *ngIf="this.apiRestService.dividas.Divida">
@@ -48,7 +48,7 @@
                     <p class="btn btn-acessar back-red">Acessar</p>
             </a>
                
-            <div class="card col-lg-2" (click)="fizPagamento()">
+            <div class="card col-lg-2" (click)="fizPagamento()" [hidden]="true">
                     <img src="assets/icons/fiz-pagamento.png" class="card-img-top" alt="...">
                     <div class="card-body">
                     <h5 class="card-title">JÁ FIZ O PAGAMENTO</h5>
